cmake_minimum_required(VERSION 3.24)
project(PP3CCB)

set(CMAKE_CXX_STANDARD 11)

add_executable(PP3CCB main.cpp Menu_Gestion.c++ Menu_Gestion.h++ Paciente.c++ Paciente.h++ Medico.c++ Medico.h++ MedicoEspecialista.c++ MedicoEspecialista.h++ MedicoGeneral.c++ MedicoGeneral.h++ MedicoMultiple.c++ MedicoMultiple.h++ Consulta.c++ Consulta.h++ ConsultaUrgente.c++ ConsultaUrgente.h++ ConsultaProgramada.c++ ConsultaProgramada.h++ Receta.c++ Receta.h++ Factura.c++ Factura.h++ Cita.c++ Cita.h++ Persona.c++ Persona.h++ GestorPacientes.c++ GestorPacientes.h++ GestorMedicos.c++ GestorMedicos.h++ GestorConsultas.c++ GestorConsultas.h++ GestorRecetas.c++ GestorRecetas.h++ GestorFacturas.c++ GestorFacturas.h++ GestorCitas.c++ GestorCitas.h++)
